--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,31 @@
         mapTypeId: "terrain",
       });
 
+      window.setTimeout(() => {
+        // Try HTML5 geolocation.
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(
+            (position) => {
+              const pos = {
+                lat: position.coords.latitude,
+                lng: position.coords.longitude,
+              };
+
+              infoWindow.setPosition(pos);
+              infoWindow.setContent("Location found.");
+              infoWindow.open(map);
+              map.setCenter(pos);
+            },
+            () => {
+              handleLocationError(true, infoWindow, map.getCenter());
+            },
+          );
+        } else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, infoWindow, map.getCenter());
+        }
+      }, 3000);
+
       infoWindow = new google.maps.InfoWindow();
 
       //console log of GeoJson
@@ -32,29 +57,57 @@
               })
               return paths
             }
-
-            console.log(block.geometry.coordinates[0])
             //create a polygon
             const paths = getPaths(block.geometry.coordinates[0]);
             const blockPoligon = new google.maps.Polygon({
               paths: paths,
-              strokeColor: block.properties.strokeColor ? block.properties.strokeColor : "#FF0000",
+              strokeColor: block.properties.strokeColor ? block.properties.strokeColor : "#6eb43b",
               strokeOpacity: block.properties.strokeOpacity ? block.properties.strokeOpacity : 0.4,
               strokeWeight: block.properties.strokeWeight ? block.properties.strokeWeight : 0,
-              fillColor: block.properties.fillColor ? block.properties.fillColor : "#FF0000",
+              fillColor: block.properties.fillColor ? block.properties.fillColor : "#00B50B",
               fillOpacity: block.properties.fillOpacity ? block.properties.fillOpacity : 0.35,
             });
-            
+
 
             //Click TODO: form census IN CONTENT
             blockPoligon.addListener("click", () => {
               infoWindow.setPosition(paths[0]);
-              infoWindow.setContent(block.properties.Name);
-              console.log(block.properties.Name);
+              infoWindow.setContent(
+                '<form class="form" action="">' +
+                '<div class="name"> Territorio: ' + block.properties.Name.split(":")[0] + ' <br/> Manzana: ' + block.properties.Name.split(":")[1] + '' + '</div>' +
+                '<div>' +
+                '<input class="dateInput" type="date" name="begin" placeholder="dd-mm-yyyy" value="" min="1997-01-01" max="2030-12-31">' +
+                '</div>' +
+                '<div>' +
+                '<input  class="button" type="button" value="Hecho">' +
+                '</div>' +
+                '</form>'
+              );
+
+
               infoWindow.open({
                 map
               });
               map.setCenter(paths[0]);
+
+
+
+              const button = document.querySelector(".button");
+              button.addEventListener("click", () => {
+                let date = document.querySelector(".dateInput").value;
+                if (date === "") {
+                  date = new Date();
+                  const offset = date.getTimezoneOffset();
+                  date = new Date(date.getTime() - (offset * 60 * 1000));
+                  date = date.toISOString().split('T')[0];
+                }
+                // SAVE DATE IN DB
+
+                //CHANGE COLOR OF POLYGON
+                blockPoligon.setOptions({
+                  fillColor: "#FF5B5B"
+                })
+              })
             })
 
             //SET IN MAP
@@ -64,11 +117,11 @@
         );
 
       //Get location
-      
+
       const locationButton = document.createElement("button");
       locationButton.textContent = "My ubicación";
       locationButton.classList.add("custom-map-control-button");
-      map.controls[google.maps.ControlPosition.TOP_CENTER].push(locationButton);
+      map.controls[google.maps.ControlPosition.BOTTOM_LEFT].push(locationButton);
       locationButton.addEventListener("click", () => {
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
@@ -93,38 +146,6 @@
           handleLocationError(false, infoWindow, map.getCenter());
         }
       });
-
-      /*
-      // Define the LatLng coordinates for the polygon's path.
-      const blockCoords = [
-        { lat: -34.5360785, lng: -58.4680514 },
-        { lat: -34.5363889, lng: -58.4679314 },
-        { lat: -34.5360757, lng: -58.4672273 },
-        { lat: -34.5360348, lng: -58.4672649 },
-        { lat: -34.5360033, lng: -58.4673111 },
-        { lat: -34.5359674, lng: -58.4673769 },
-        { lat: -34.5359525, lng: -58.4674144 },
-        { lat: -34.5359404, lng: -58.4674935 },
-        { lat: -34.535958, lng: -58.4676699 },
-        { lat: -34.5360785, lng: -58.4680514 },
-      ];
-      // Construct the polygon.
-      const blockPoligon = new google.maps.Polygon({
-        paths: blockCoords,
-        strokeColor: "#FF0000",
-        strokeOpacity: 0.4,
-        strokeWeight: 0,
-        fillColor: "#FF0000",
-        fillOpacity: 0.35,
-      });
-
-      //Click TODO: form census
-      blockPoligon.addListener("click", () => {
-        map.setZoom(15);
-      })
-
-      blockPoligon.setMap(map);
-      */
     }
 
     window.initMap = initMap;
@@ -142,6 +163,9 @@
     }
 
     .custom-map-control-button {
+      position: absolute;
+      top: 90%;
+      left: 80%;
       background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
       border-radius: 8px;
       border-style: none;
@@ -166,6 +190,56 @@
     .custom-map-control-button:hover {
       box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
       transition-duration: .1s;
+    }
+
+    .form {
+      padding: 0 1.6rem;
+    }
+
+    .name {
+      font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      font-size: 16px;
+      font-weight: 700;
+      margin-bottom: 4%;
+    }
+
+    .dateInput {
+      appearance: none !important;
+      -webkit-appearance: none !important;
+      font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      font-size: 16px;
+      font-weight: 500;
+      margin: 2%;
+      padding: 2%;
+      border-radius: 8px;
+      border-style: none;
+    }
+
+    .button {
+      outline: none !important;
+      -webkit-appearance: none !important;
+      -moz-appearance: none !important;
+      appearance: none !important;
+      background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
+      border-radius: 8px;
+      border-style: none;
+      box-sizing: border-box;
+      color: #FFFFFF;
+      cursor: pointer;
+      flex-shrink: 0;
+      font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      font-size: 16px;
+      font-weight: 500;
+      height: 4rem;
+      padding: 0 1.6rem;
+      text-align: center;
+      text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+      transition: all .5s;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+      margin: 2%;
+      width: 100%;
     }
   </style>
 </head>
