fix: conection with Backend and now we have js folder with js and css folder with style

--- a/src/index.html
+++ b/src/index.html
@@ -3,246 +3,9 @@
 
 <head>
   <title>Devoto LSA - Map</title>
+  <link rel="stylesheet" href="./css/index.css" />
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-  <script>
-    function initMap() {
-      //Map
-      const map = new google.maps.Map(document.getElementById("map"), {
-        zoom: 17,
-        center: { lat: -34.568, lng: -58.468 },
-        mapTypeId: "terrain",
-      });
-
-      // LOCATION PLACE CENTER
-      window.setTimeout(() => {
-        // Try HTML5 geolocation.
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(
-            (position) => {
-              const pos = {
-                lat: position.coords.latitude,
-                lng: position.coords.longitude,
-              };
-
-              infoWindow.setPosition(pos);
-              infoWindow.setContent("Location found.");
-              infoWindow.open(map);
-              map.setCenter(pos);
-            },
-            () => {
-              handleLocationError(true, infoWindow, map.getCenter());
-            },
-          );
-        } else {
-          // Browser doesn't support Geolocation
-          handleLocationError(false, infoWindow, map.getCenter());
-        }
-      }, 3000);
-
-      infoWindow = new google.maps.InfoWindow();
-
-      //FECHING DE DATOS
-      fetch('./data/blockData.json')
-        .then((response) => {
-          if (!response.ok) {
-            throw new Error(`Error al cargar el archivo JSON: ${response.status}`);
-          }
-          return response.json()
-        })
-        .then((json) => {
-          json.features.forEach(block => {
-            function getPaths(points) {
-              let paths = [];
-              points.forEach(point => {
-                paths.push({ lat: point[1], lng: point[0] })
-              })
-              return paths
-            }
-            //create a polygon
-            const paths = getPaths(block.geometry.coordinates[0]);
-            const blockPoligon = new google.maps.Polygon({
-              paths: paths,
-              strokeColor: block.properties.strokeColor ? block.properties.strokeColor : "#6eb43b",
-              strokeOpacity: block.properties.strokeOpacity ? block.properties.strokeOpacity : 0.4,
-              strokeWeight: block.properties.strokeWeight ? block.properties.strokeWeight : 0,
-              fillColor: block.properties.fillColor ? block.properties.fillColor : "#00B50B",
-              fillOpacity: block.properties.fillOpacity ? block.properties.fillOpacity : 0.35,
-            });
-
-
-            //Click TODO: form census IN CONTENT
-            blockPoligon.addListener("click", () => {
-              infoWindow.setPosition(paths[0]);
-              infoWindow.setContent(
-                '<form class="form" action="">' +
-                '<div class="name"> Territorio: ' + block.properties.Name.split(":")[0] + ' <br/> Manzana: ' + block.properties.Name.split(":")[1] + '' + '</div>' +
-                '<div>' +
-                '<input class="dateInput" type="date" name="begin" placeholder="dd-mm-yyyy" value="" min="1997-01-01" max="2030-12-31">' +
-                '</div>' +
-                '<div>' +
-                '<input  class="button" type="button" value="Hecho">' +
-                '</div>' +
-                '</form>'
-              );
-
-
-              infoWindow.open({
-                map
-              });
-              map.setCenter(paths[0]);
-
-
-
-              const button = document.querySelector(".button");
-              button.addEventListener("click", () => {
-                let date = document.querySelector(".dateInput").value;
-                if (date === "") {
-                  date = new Date();
-                  const offset = date.getTimezoneOffset();
-                  date = new Date(date.getTime() - (offset * 60 * 1000));
-                  date = date.toISOString().split('T')[0];
-                }
-                // SAVE DATE IN DB
-
-                //CHANGE COLOR OF POLYGON
-                blockPoligon.setOptions({
-                  fillColor: "#FF5B5B"
-                })
-              })
-            })
-
-            //SET IN MAP
-            blockPoligon.setMap(map);
-          })
-        }
-      );
-
-      //Get location
-
-      const locationButton = document.createElement("button");
-      locationButton.textContent = "My ubicación";
-      locationButton.classList.add("custom-map-control-button");
-      map.controls[google.maps.ControlPosition.BOTTOM_LEFT].push(locationButton);
-      locationButton.addEventListener("click", () => {
-        // Try HTML5 geolocation.
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(
-            (position) => {
-              const pos = {
-                lat: position.coords.latitude,
-                lng: position.coords.longitude,
-              };
-
-              infoWindow.setPosition(pos);
-              infoWindow.setContent("Location found.");
-              infoWindow.open(map);
-              map.setCenter(pos);
-            },
-            () => {
-              handleLocationError(true, infoWindow, map.getCenter());
-            },
-          );
-        } else {
-          // Browser doesn't support Geolocation
-          handleLocationError(false, infoWindow, map.getCenter());
-        }
-      });
-    }
-
-    window.initMap = initMap;
-  </script>
-  <style>
-    #map {
-      height: 100%;
-    }
-
-    html,
-    body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
-
-    .custom-map-control-button {
-      position: absolute;
-      top: 90%;
-      left: 80%;
-      background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
-      border-radius: 8px;
-      border-style: none;
-      box-sizing: border-box;
-      color: #FFFFFF;
-      cursor: pointer;
-      flex-shrink: 0;
-      font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      font-size: 19px;
-      font-weight: 500;
-      height: 4rem;
-      padding: 0 1.6rem;
-      text-align: center;
-      text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
-      transition: all .5s;
-      user-select: none;
-      -webkit-user-select: none;
-      touch-action: manipulation;
-      margin: 2%;
-    }
-
-    .custom-map-control-button:hover {
-      box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
-      transition-duration: .1s;
-    }
-
-    .form {
-      padding: 0 1.6rem;
-    }
-
-    .name {
-      font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      font-size: 19px;
-      font-weight: 700;
-      margin-bottom: 4%;
-    }
-
-    .dateInput {
-      appearance: none !important;
-      -webkit-appearance: none !important;
-      font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      font-size: 19px;
-      font-weight: 500;
-      margin: 2%;
-      padding: 2%;
-      border-radius: 8px;
-      border-style: none;
-    }
-
-    .button {
-      outline: none !important;
-      -webkit-appearance: none !important;
-      -moz-appearance: none !important;
-      appearance: none !important;
-      background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
-      border-radius: 8px;
-      border-style: none;
-      box-sizing: border-box;
-      color: #FFFFFF;
-      cursor: pointer;
-      flex-shrink: 0;
-      font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      font-size: 19px;
-      font-weight: 500;
-      height: 4rem;
-      padding: 0 1.6rem;
-      text-align: center;
-      text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
-      transition: all .5s;
-      user-select: none;
-      -webkit-user-select: none;
-      touch-action: manipulation;
-      margin: 2%;
-      width: 100%;
-    }
-  </style>
+  <script src="./js/index.js"></script>
 </head>
 
 <body>
